--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -16,6 +16,7 @@
     "es6-promise": "^4.2.4",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "isomorphic-fetch": "^2.2.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "request": "^2.85.0"
